--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src="img/10.gif" alt="">
     <img src="img/12.jpg" alt="">
     <img src="img/13.jpg" alt="">
-    <img src="img/14.gif" alt="">
+    <img src="img/14.jpg" alt="">
     <img src="img/15.gif" alt="">
     <img src="img/last.jpg" alt="">
   </div>
