--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="img/03.jpg" alt="">
     <img src="img/04.gif" alt="">
     <img src="img/partner.gif" alt="">
-
+    <img src="img/10.gif" alt="">
     <img src="img/04.jpg" alt="">
     <img src="img/13.jpg" alt="">
     <img src="img/05.jpg" alt="">
