--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
   <div class="detail_page">
-    <img src="img/01.gif" alt="">
+    <img src="img/01.jpg" alt="">
     <img src="img/02.gif" alt="">
     <img src="img/03.jpg" alt="">
-    <img src="img/04.gif" alt="">
-    <img src="img/partner.gif" alt="">
-    <img src="img/10.gif" alt="">
+    <img src="img/02.jpg" alt="">
+    <img src="img/10.jpg" alt="">
     <img src="img/04.jpg" alt="">
     <img src="img/13.jpg" alt="">
     <img src="img/05.jpg" alt="">
