--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="img/02.jpg" alt="">
     <img src="img/10.jpg" alt="">
     <img src="img/04.jpg" alt="">
-    <img src="img/13.jpg" alt="">
+    <img src="img/13_2.jpg" alt="">
     <img src="img/05.jpg" alt="">
     <img src="img/06.gif" alt="">
     <img src="img/07.gif" alt="">
